@@ -1,3 +1,8 @@
+2010-11-09 Harald Oehlmann <oehhar@users.sourceforge.net>
+
+	* mainframe.tcl Menu text shows white on white on Mac aqua
+	[Bug 3105665] reported by Scott Smedley fixed by Kevin Walzer.
+
 2010-10-15 Harald Oehlmann <oehhar@users.sourceforge.net>
 
 	* label.tcl The frame surround the label gets under
